# python-gui-project-template

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: test_and_lint.yml
python_gui_project_template/: __init__.py  __main__.py  model.py  presenter.py  view.py
test/: test_main.py
