[tool.poetry]
name = "python_gui_project_template"
version = "0.1.0"
description = "project description"
authors = ["Robert Nyström <robert.nystrom@toolsense.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
result = "^0.8.0"
pyside6 = "^6.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ['python_gui_project_template/ui']

[tool.black]
line-length = 120
exclude = '''
/(
  | .venv
  | ui
)/
'''

[tool.isort]
profile = "black"
lines_after_imports = 2
skip = [".gitignore", ".dockerignore", "migrations", ".venv", "main_window_ui.py"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.yapf]
based_on_style = "pep8"
